# AERSP_424

./: README.md  attempt 3  hello  q1.cpp
final_project/: .gitignore  CMakeLists.txt  README.md  build.sh
final_project/Include/: Knight.h  Pawn.h  Pieces.h  Queen.h  board.h  game.h  square.h
final_project/include/: Bishop.h  Board.h  King.h  Knight.h  Pawn.h  Piece.h  Pieces.h  Queen.h  Rook.h  Square.h  game.h  player.h  square.h
final_project/source/: Bishop.cpp  Board.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Pieces copy.cpp  Pieces.cpp  Queen.cpp  Rook.cpp  Square.cpp  board.cpp  game.cpp  main.cpp  player.cpp  square.cpp
hw01/: main.cpp  q1.cpp  q2.cpp  q2.h  q34.cpp  q34.h  q5.cpp  q6.cpp  q6.h  q68.cpp  q68.h  q7.cpp  q8.cpp
hw02/: CMakeLists.txt  README.md  build.sh  butterfly_curve.csv
hw02/include/: aerospaceControlSystem.h  q1.h  q2.h  q3.h  q4.h  sensor.h  sensorFactory.h
hw02/source/: aerospaceControlSystem.cpp  main.cpp  q1.cpp  q2.cpp  q3.cpp  q4.cpp  q5.md  q6.md  sensor.cpp  sensorFactory.cpp
